# LPrimitive

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  gtest.7z  xmake.lua
cmake/: Common.cmake  Project.cmake  init_cmakeutils.cmake  utils.cmake
config/: LPrimitive.cmake.in
include/: InterfaceUUID.hpp  ReferenceCounterObject.hpp
note/: allocator.md  cmake.md  memory-order.md
note/workspacesetting/: launch.json  settings.json  tasks.json
src/: CMakeLists.txt  xmake.lua
src/allocator/interface/: Allocator.hpp  DefaultMemoryAllocator.hpp  EAAllocatorImpl.hpp  HeapAllocator.hpp  HeapChunk.hpp  IAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp  STDAllocator.hpp  StaticChunk.hpp  VariableSizeAllocationsManager.hpp
src/allocator/src/: DefaultMemoryAllocator.cpp  VariableSizeAllocationsManager.cpp
src/basic/: CMakeLists.txt
src/basic/interface/: Atomics.hpp  HashUtils.hpp  IDataBlob.hpp  IObject.hpp  Logger.hpp  Misc.hpp
src/basic/src/: SpinLock.cpp
src/common/: CMakeLists.txt
src/common/interface/: CStringTool.hpp  CommandLineParse.hpp  DebugUtility.hpp  LoadDll.hpp  RefCountWeakPtr.hpp  ReferenceCounter.hpp  STDAllocator.hpp  TObject.hpp
src/common/src/: DataBlob.cpp  VariableSizeAllocationsManager.cpp
src/interface/primitive/allocator/: Allocator.hpp  AllocatorInterfaces.hpp  DefaultMemoryAllocator.hpp  EAAllocatorImpl.hpp  HeapAllocator.hpp  HeapChunk.hpp  IAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp  STDAllocator.hpp  StaticChunk.hpp  VariableSizeAllocationsManager.hpp
src/interface/primitive/utils/: Align.hpp  ArrayHandle.hpp  Atomics.hpp  CStringTool.hpp  Common.hpp  CommonDefines.hpp  EnumBitOperation.hpp  Handle.h  HandleAllocator.hpp  HashUtils.hpp  Logger.hpp  MPMC_FixedQueue.hpp  MPMC_Queue.hpp  MPMC_Stack.hpp  MPSC_FixedQueue.hpp  MPSC_Queue.hpp  MPSC_Stack.hpp  Misc.hpp  SpinLock.hpp  Time.hpp  VersionObjectPool.hpp
src/memory/interface/: Allocator.hpp  HeapAllocator.hpp  LinearAllocator.hpp  MemResource.hpp  PoolAllocator.hpp  ThreadSafeVersionPool.hpp
src/memory/private/: Allocator.cpp
src/private/: CString.cpp  CallStack.cpp  DefaultAllocator.cpp  DefaultMemoryAllocator.cpp  VariableSizeAllocationsManager.cpp
src/public/: Allocator__.hpp  Atomics.hpp  CString.hpp  CStringTool.hpp  CallStack.hpp  Containers.hpp  DefaultAllocator.hpp  EAAllocatorImpl.hpp  Handle.h  HandleAllocator.hpp  HashUtils.hpp  HeapChunk.hpp  IAllocator.hpp  LinearAllocator.hpp  Primitives.hpp  STDAllocator.hpp  StaticChunk.hpp  VariableSizeAllocationsManager.hpp  VersionObjectPool.hpp
src/reference_counter/interface/: DataBlob.cpp  DataBlob.hpp  IObject.hpp  IReferenceCounter.hpp  InterfaceUUID.hpp  LoadDll.hpp  RefCountPtr.hpp  RefCountWeakPtr.hpp  ReferenceCounter.hpp  ReferenceCounterObject.hpp  TObject.hpp
src/utils/interface/: Align.hpp  ArrayHandle.hpp  Atomics.hpp  CString.hpp  CStringTool.hpp  CallStack.hpp  Common.hpp  CommonDefines.hpp  DataBlob.hpp  DebugUtility.hpp  EnumBitOperation.hpp  FormatString.hpp  HashUtils.hpp  IDataBlob.hpp  Logger.hpp  MPMC_FixedQueue.hpp  MPMC_Queue.hpp  MPMC_Stack.hpp  MPSC_FixedQueue.hpp  MPSC_Queue.hpp  MPSC_Stack.hpp  Misc.hpp  SpinLock.hpp  Time.hpp
src/utils/private/: SpinLock.cpp  Time.cpp
src/utils/src/: CString.cpp  CallStack.cpp  DataBlob.cpp  SpinLock.cpp  Time.cpp
test/: CMakeLists.txt  empty.cpp  xmake.lua
test/src/: main.cpp  test-FormatString.cpp  test-Logger.cpp  test-VariableSizeAllocationsManager.cpp  test-align.cpp  test-eastl-lib.cpp  test-enum-bit-operation.cpp
xmake/: xmake.lua
xmake/modules/: xmake_utils_modules_import.lua
xmake/rules/: cm-cxflags.lua  dep-eastl.lua  mode-init.lua
